--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,13 +1,45 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.stjais.carpoolkarle.AccountFragment">
+    android:orientation="vertical"
+    tools:context="com.example.stjais.carpoolkarle.UserProfile">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account" />
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:text="Profile"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:id="@+id/fname"
+        android:text="fullname"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/email"
+        android:layout_marginTop="30dp"
+        android:text="Email"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:id="@+id/pss"
+        android:text="Password"
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <Button
+        android:layout_marginTop="30dp"
+        android:id="@+id/btnlogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        />
+
+</LinearLayout>
