--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,45 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.stjais.carpoolkarle.UserProfile">
+    android:padding="@dimen/activity_horizontal_margin">
 
 
     <TextView
+        android:id="@+id/user_id"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="30dp"
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
+
+    <TextView
+        android:id="@+id/email_field"
         android:textStyle="bold"
-        android:text="Profile"/>
-    <TextView
         android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:id="@+id/fname"
-        android:text="fullname"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
+
     <TextView
+        android:id="@+id/displayed_name"
+        android:textStyle="bold"
         android:layout_width="match_parent"
-        android:id="@+id/email"
-        android:layout_marginTop="30dp"
-        android:text="Email"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_marginTop="30dp"
-        android:id="@+id/pss"
-        android:text="Password"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
 
     <Button
-        android:layout_marginTop="30dp"
-        android:id="@+id/btnlogout"
+        android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"
-        />
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:background="#FFA000"
+        android:text="LogOut" />
 
 </LinearLayout>
