--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,13 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/btnlogin"/>
+     <com.google.android.gms.common.SignInButton
+      android:id="@+id/sign_in_button"
+     android:layout_width="200dp"
+         android:layout_marginTop="10dp"
+         android:layout_gravity="center"
+     android:layout_height="wrap_content"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
