--- a/app/src/main/res/layout/activity_registor.xml
+++ b/app/src/main/res/layout/activity_registor.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,42 +20,89 @@
         android:textColor="#ecf0f1"
         android:textSize="35dp"
         android:textStyle="bold"/>
-    <EditText
-        android:id="@+id/et_fullname"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_name"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:hint="fullname"
-        android:textColorHint="#ecf0f1" />
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/et_fullname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="fullname"
+            android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_email_"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="email"
         android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_age"
+        android:layout_width="match_parent"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Age"
         android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_contact"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_cno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contact no"
         android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_username"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="username"
         android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
+        app:errorEnabled="true"
+        android:textColorHint="#ecf0f1"
+        app:errorTextAppearance="@style/WelcomeErrorAppearance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
@@ -63,13 +110,12 @@
         android:hint="Set password"
         android:inputType="textPassword"
         android:textColorHint="#ecf0f1" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btnSignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Signup" />
-
-
 </LinearLayout>
 </ScrollView>
