--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/registorbackground"
     android:orientation="vertical"
     tools:context="com.example.stjais.carpoolkarle.ResetPasswordActivity">
 
@@ -40,10 +41,11 @@
 
     <Button
         android:id="@+id/btn_reset_password"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:background="@drawable/roundedbutton"
         android:text="Reset Password" />
 
     <Button
@@ -51,7 +53,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@null"
         android:text="BACK"
         android:layout_gravity="center"
         android:textColor="@android:color/holo_blue_dark" />
