--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#16a085</color>
     <color name="colorPrimaryDark">#1abc9c</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ecf0f1</color>
+    <color name="hintcolor">#ecf0f1</color>
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
     <color name="bg_screen2">#20d2bb</color>
